app-promo-mobile message style issue on mobile device Fixed 🐿 v2.12.5

--- a/src/components/bottom/app-promo-mobile/main.scss
+++ b/src/components/bottom/app-promo-mobile/main.scss
@@ -1,16 +1,18 @@
 .n-messaging-banner--app-promo-mobile {
 	.app-promo-mobile__device {
-		left: 70px;
+		left: 90px;
 		top: 20px;
 		position: absolute;
 	}
-	.n-messaging-banner__action {
+	
+	.n-messaging-banner__content--img {
+		margin-left: 238px;
+	}
+
+	.n-messaging-banner__actions {
 		a {
 			border-bottom: 0;
 			outline: 0;
 		}
-	}
-	.n-messaging-banner__content p {
-		padding-left: 190px;
 	}
 }
